# mars-t

./: Cargo.toml  LICENSE.md  README.md  snapcraft.yaml
src/: info.rs  lib.rs  main.rs
