[package]
name = "mars-t"
version = "0.0.0-alpha.1"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "under construction / reserved name"
readme = "README.md"
repository = "https://github.com/piotrbajdek/mars-t"
license = "UPL-1.0"

[profile.release]
codegen-units = 1
strip = true
