[package]
name = "mars-t"
version = "0.0.0-alpha.2"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "Mars Sol Date, Martian Coordinated Time / Airy Mean Time, Local Mean Solar Time on Mars [UNDER CONSTRUCTION]"
readme = "README.md"
repository = "https://github.com/piotrbajdek/mars-t"
license = "UPL-1.0"
keywords = ["astronautics", "astronomy", "date", "Mars", "time"]
categories = ["aerospace", "command-line-utilities", "date-and-time", "internationalization"]

[profile.release]
codegen-units = 1
strip = true
