[package]
name = "mars-t"
version = "0.2.0"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "Mars Sol Date & Martian Coordinated Time: a library and a CLI app"
readme = "README.md"
repository = "https://github.com/piotrbajdek/mars-t"
license = "UPL-1.0"
keywords = ["astronautics", "astronomy", "date", "Mars", "time"]
categories = ["aerospace", "command-line-utilities", "date-and-time", "internationalization"]

[profile.release]
codegen-units = 1
strip = true

[dependencies]
hifitime = "3.8"

[package.metadata.generate-rpm]
assets = [
{ source = "target/release/mars-t", dest = "/usr/bin/mars-t", mode = "755" }
]
